# Image_Super_Resolution_evaluation

./: .gitattributes  .gitignore  CLAUDE.md  DOCS.md  README.md  pyproject.toml  pytest.ini  report.txt  requirements.txt  run_all.sh  train.ipynb
configs/: sr3_df2k_x4.yaml  sr3_x4.yaml  srcnn_df2k_x4.yaml  srcnn_x4.yaml  srgan_df2k_x4.yaml  swinir_df2k_x4.yaml  swinir_x4.yaml
content/: experiments.tex
experiments/sr3_df2k_x4/: history.json
experiments/srcnn_df2k_x4/: history.json  last.pth
experiments/srgan_df2k_x4/: history.json
experiments/swinir_df2k_x4/: history.json
experiments_20ep/sr3_df2k_x4/: history.json
experiments_20ep/srgan_df2k_x4/: history.json
experiments_20ep/swinir_df2k_x4/: history.json
results/: comparison.json  comparison.md  comparison_20ep.md
results/swinir_x4/: per_image_metrics.csv  report.md
scripts/: download_data.sh  download_weights.sh  eval_all.py  evaluate.py  evaluate_report.py  extract_subimages.py  make_report_figures.py  train.py
src/: losses.py
src/datasets/: __init__.py  benchmark.py  div2k.py  realsr.py  transforms.py
src/engine/: __init__.py  evaluator.py  trainer.py
src/metrics/: __init__.py  common.py  lpips_metric.py  noref.py  psnr.py  ssim.py
src/models/: __init__.py  sr3.py  srcnn.py  srgan.py  swinir.py  swinir_arch.py
src/utils/: __init__.py  config.py  registry.py
tests/: conftest.py
tests/integration/: test_datasets.py  test_df2k.py  test_noref_compute.py  test_realsr.py  test_train_eval.py
tests/unit/: test_config.py  test_degradation.py  test_diffusion.py  test_losses.py  (+5 more)
(+3 files in other folders)
