[project]
name = "image-super-resolution-evaluation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lpips>=0.1.4",
    "numba>=0.59",
    "numpy>=2.4.6",
    "pillow>=12.3.0",
    "pyiqa>=0.1.15.post2",
    "pytest>=9.1.1",
    "pyyaml>=6.0.3",
    "torch>=2.0",
    "torchvision>=0.15",
    "tqdm>=4.68.3",
]
